--- a/ui/src/main/res/values-pl-rPL/strings.xml
+++ b/ui/src/main/res/values-pl-rPL/strings.xml
@@ -14,7 +14,7 @@
     </plurals>
     <plurals name="delete_title">
         <item quantity="one">%d wybrany tunel</item>
-        <item quantity="few">%d wybranych tuneli</item>
+        <item quantity="few">%d wybrane tunele</item>
         <item quantity="many">%d wybranych tuneli</item>
         <item quantity="other">%d wybranych tuneli</item>
     </plurals>
@@ -81,23 +81,22 @@
         <item quantity="many">sekund</item>
         <item quantity="other">sekundy</item>
     </plurals>
-    <string name="use_all_applications">Używaj wszystkich aplikacji</string>
-    <string name="add_peer">Dodaj Peer\'a</string>
+    <string name="use_all_applications">Użyj wszystkich</string>
+    <string name="add_peer">Dodaj klienta</string>
     <string name="addresses">Adresy</string>
     <string name="applications">Aplikacje</string>
     <string name="allow_remote_control_intents_summary_off">Zewnętrzne aplikacje nie mogą przełączać tuneli (zalecane)</string>
     <string name="allow_remote_control_intents_summary_on">Zewnętrzne aplikacje mogą przełączać tunele (zaawansowane)</string>
     <string name="allow_remote_control_intents_title">Zezwól na kontrolowanie przez zewnętrzne aplikacje</string>
     <string name="allowed_ips">Dozwolone adresy IP</string>
-    <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%1$s dla %2$s</string>
     <string name="bad_config_context_top_level">%s</string>
     <string name="bad_config_error">%1$s w %2$s</string>
-    <string name="bad_config_explanation_pka">: Musi być dodatnia i nie większa niż 65535</string>
+    <string name="bad_config_explanation_pka">: Musi być dodatni i nie większy niż 65535</string>
     <string name="bad_config_explanation_positive_number">: Musi być dodatni</string>
-    <string name="bad_config_explanation_udp_port">: Musi być poprawnym numerem portu UDP</string>
+    <string name="bad_config_explanation_udp_port">: Musi być prawidłowym numerem portu UDP</string>
     <string name="bad_config_reason_invalid_key">Nieprawidłowy klucz</string>
-    <string name="bad_config_reason_invalid_number">Numer jest nieprawidłowy</string>
+    <string name="bad_config_reason_invalid_number">Nieprawidłowa liczba</string>
     <string name="bad_config_reason_invalid_value">Nieprawidłowa wartość</string>
     <string name="bad_config_reason_missing_attribute">Brakujący atrybut</string>
     <string name="bad_config_reason_missing_section">Brakująca sekcja</string>
@@ -105,27 +104,27 @@
     <string name="bad_config_reason_unknown_attribute">Nieznany atrybut</string>
     <string name="bad_config_reason_unknown_section">Nieznana sekcja</string>
     <string name="bad_config_reason_value_out_of_range">Wartość poza zakresem</string>
-    <string name="bad_extension_error">Plik musi być .conf lub .zip</string>
+    <string name="bad_extension_error">Plik musi posiadać rozszerzenie CONF lub ZIP</string>
     <string name="cancel">Anuluj</string>
-    <string name="config_delete_error">Nie można usunąć pliku konfiguracyjnego %s</string>
-    <string name="config_exists_error">Konfiguracja dla \"%s\" już istnieje</string>
-    <string name="config_file_exists_error">Plik konfiguracyjny \"%s\" już istnieje</string>
-    <string name="config_not_found_error">Plik konfiguracyjny \"%s\" nie został znaleziony</string>
-    <string name="config_rename_error">Nie można zmienić nazwy pliku konfiguracyjnego \"%s\"</string>
-    <string name="config_save_error">Nie można zapisać konfiguracji dla \"%1$s\": %2$s</string>
-    <string name="config_save_success">Pomyślnie zapisano konfigurację dla \"%s\"</string>
+    <string name="config_delete_error">Nie można usunąć pliku konfiguracyjnego „%s”</string>
+    <string name="config_exists_error">Konfiguracja dla „%s” już istnieje</string>
+    <string name="config_file_exists_error">Plik konfiguracyjny „%s” już istnieje</string>
+    <string name="config_not_found_error">Nie znaleziono pliku konfiguracyjnego „%s”</string>
+    <string name="config_rename_error">Nie można zmienić nazwy pliku konfiguracyjnego „%s”</string>
+    <string name="config_save_error">Nie można zapisać konfiguracji dla „%1$s”: %2$s</string>
+    <string name="config_save_success">Pomyślnie zapisano konfigurację dla „%s”</string>
     <string name="create_activity_title">Utwórz tunel WireGuard</string>
-    <string name="create_bin_dir_error">Nie można stworzyć tymczasowego folderu lokalnego</string>
+    <string name="create_bin_dir_error">Nie można utworzyć lokalnego folderu dla plików wykonywalnych</string>
     <string name="create_downloads_file_error">Nie można utworzyć pliku w folderze pobierania</string>
-    <string name="create_empty">Utwórz od podstaw</string>
+    <string name="create_empty">Utwórz ręcznie</string>
     <string name="create_from_file">Utwórz z pliku lub archiwum</string>
     <string name="create_from_qr_code">Zeskanuj kod QR</string>
     <string name="create_output_dir_error">Nie można utworzyć folderu wyjściowego</string>
-    <string name="create_temp_dir_error">Nie można stworzyć tymczasowego folderu lokalnego</string>
-    <string name="create_tunnel">Utwórz Tunel</string>
+    <string name="create_temp_dir_error">Nie można utworzyć tymczasowego folderu lokalnego</string>
+    <string name="create_tunnel">Utwórz tunel</string>
     <string name="copied_to_clipboard">%s skopiowano do schowka</string>
-    <string name="dark_theme_summary_off">Obecnie używasz jasnego (dzień) motywu</string>
-    <string name="dark_theme_summary_on">Obecnie używa ciemnego (nocnego) motywu</string>
+    <string name="dark_theme_summary_off">Obecnie używany jest jasny motyw</string>
+    <string name="dark_theme_summary_on">Obecnie używany jest ciemny motyw</string>
     <string name="dark_theme_title">Użyj ciemnego motywu</string>
     <string name="delete">Usuń</string>
     <string name="tv_delete">Wybierz tunel do usunięcia</string>
@@ -139,61 +138,61 @@
     <string name="endpoint">Punkt końcowy</string>
     <string name="error_down">Błąd podczas zamykania tunelu: %s</string>
     <string name="error_fetching_apps">Błąd podczas pobierania listy aplikacji: %s</string>
-    <string name="error_root">Proszę uzyskać dostęp do root\'a i spróbować ponownie</string>
-    <string name="error_up">Błąd podczas włączania tunelu: %s</string>
+    <string name="error_root">Proszę uzyskać dostęp do root-a i spróbować ponownie</string>
+    <string name="error_up">Błąd podczas otwierania tunelu: %s</string>
     <string name="exclude_private_ips">Wyklucz prywatne adresy IP</string>
     <string name="generate_new_private_key">Wygeneruj nowy klucz prywatny</string>
-    <string name="generic_error">Nieznany błąd \"%s\"</string>
-    <string name="hint_automatic">(automatycznie)</string>
-    <string name="hint_generated">(wygenerowane)</string>
+    <string name="generic_error">Nieznany błąd „%s”</string>
+    <string name="hint_automatic">(auto.)</string>
+    <string name="hint_generated">(wygenerowany)</string>
     <string name="hint_optional">(opcjonalnie)</string>
     <string name="hint_optional_discouraged">(opcjonalnie, niezalecane)</string>
     <string name="hint_random">(losowy)</string>
-    <string name="illegal_filename_error">Niedozwolona nazwa pliku \"%s\"</string>
+    <string name="illegal_filename_error">Niedozwolona nazwa pliku „%s”</string>
     <string name="import_error">Nie można zaimportować tunelu: %s</string>
     <string name="import_from_qr_code">Importuj tunel za pomocą kodu QR</string>
-    <string name="import_success">Zaimportowano \"%s\"</string>
+    <string name="import_success">Zaimportowano „%s”</string>
     <string name="interface_title">Interfejs</string>
-    <string name="key_contents_error">Niepoprawne znaki w kluczu</string>
-    <string name="key_length_error">Niewłaściwa długość klucza</string>
-    <string name="key_length_explanation_base64">: klucze base64 WireGuard\'a muszą mieć długość 44 znaków (32 bajty)</string>
-    <string name="key_length_explanation_binary">: klucze WireGuard\'a muszą wynosić 32 bajty</string>
-    <string name="key_length_explanation_hex">: klucze hex WireGuard\'a muszą mieć długość 64 znaków (32 bajty)</string>
+    <string name="key_contents_error">Nieprawidłowe znaki w kluczu</string>
+    <string name="key_length_error">Nieprawidłowa długość klucza</string>
+    <string name="key_length_explanation_base64">: Klucze Base64 WireGuard-a muszą mieć długość 44 znaków (32 bajty)</string>
+    <string name="key_length_explanation_binary">: Klucze WireGuard-a muszą mieć wielkość 32 bajtów</string>
+    <string name="key_length_explanation_hex">: Klucze Hex WireGuard-a muszą mieć długość 64 znaków (32 bajty)</string>
     <string name="listen_port">Port nasłuchu</string>
     <string name="log_export_error">Nie można wyeksportować logu: %s</string>
     <string name="log_export_subject">Plik logu programu WireGuard dla systemu Android</string>
-    <string name="log_export_success">Zapisano w \"%s\"</string>
+    <string name="log_export_success">Zapisano w „%s”</string>
     <string name="log_export_title">Wyeksportuj plik logu</string>
     <string name="log_saver_activity_label">Zapisz log</string>
     <string name="log_viewer_pref_summary">Logi mogą pomóc w debugowaniu</string>
     <string name="log_viewer_pref_title">Wyświetl log aplikacji</string>
     <string name="log_viewer_title">Log</string>
-    <string name="logcat_error">Nie można uruchomić logcat: </string>
+    <string name="logcat_error">Nie można uruchomić narzędzia logcat: </string>
     <string name="module_disabler_disabled_summary">Eksperymentalny moduł jądra może poprawić wydajność</string>
     <string name="module_disabler_disabled_title">Włącz moduł jądra</string>
     <string name="module_disabler_enabled_summary">Wolniejsza implementacja w przestrzeni użytkownika może poprawić stabilność</string>
     <string name="module_disabler_enabled_title">Wyłącz moduł jądra</string>
     <string name="module_installer_error">Coś poszło nie tak. Proszę spróbować ponownie</string>
     <string name="module_installer_initial">Eksperymentalny moduł jądra może poprawić wydajność</string>
-    <string name="module_installer_not_found">Brak dostępnych modułów dla twojego urządzenia</string>
+    <string name="module_installer_not_found">Brak dostępnych modułów dla tego urządzenia</string>
     <string name="module_installer_title">Pobierz i zainstaluj moduł jądra</string>
     <string name="module_installer_working">Pobieranie i instalowanie…</string>
     <string name="module_version_error">Nie można określić wersji modułu jądra</string>
     <string name="mtu">MTU</string>
     <string name="multiple_tunnels_summary_off">Włączenie jednego tunelu spowoduje wyłączenie innych</string>
     <string name="multiple_tunnels_summary_on">Wiele tuneli może być włączonych jednocześnie</string>
-    <string name="multiple_tunnels_title">Zezwalaj na wiele tuneli równoległych</string>
+    <string name="multiple_tunnels_title">Zezwól na wiele równoległych tuneli</string>
     <string name="name">Nazwa</string>
-    <string name="no_config_error">Próba przywołania tunelu bez konfiguracji</string>
+    <string name="no_config_error">Próba otwarcia tunelu bez konfiguracji</string>
     <string name="no_configs_error">Nie odnaleziono żadnych konfiguracji</string>
     <string name="no_tunnels_error">Brak tuneli</string>
-    <string name="parse_error_generic">ciągu</string>
+    <string name="parse_error_generic">ciąg</string>
     <string name="parse_error_inet_address">Adresy IP</string>
     <string name="parse_error_inet_endpoint">punkt końcowy</string>
     <string name="parse_error_inet_network">Sieć IP</string>
-    <string name="parse_error_integer">numer</string>
+    <string name="parse_error_integer">liczba</string>
     <string name="parse_error_reason">Nie można przetworzyć %1$s „%2$s”</string>
-    <string name="peer">Peer</string>
+    <string name="peer">Klient</string>
     <string name="permission_description">kontrolowanie tuneli WireGuard, włączanie i wyłączanie tuneli, potencjalnie błędne kierowanie ruchem internetowym</string>
     <string name="permission_label">sterowanie tunelami WireGuard</string>
     <string name="persistent_keepalive">Utrzymanie połączenia</string>
@@ -202,9 +201,9 @@
     <string name="private_key">Klucz prywatny</string>
     <string name="public_key">Klucz publiczny</string>
     <string name="qr_code_hint">Wskazówka: wygeneruj za pomocą `qrencode -t ansiutf8 &lt; tunnel.conf`.</string>
-    <string name="restore_on_boot_summary_off">Włączone tunele nie zostaną przywrócone przy uruchomieniu</string>
-    <string name="restore_on_boot_summary_on">Włączone tunele zostaną przywrócone przy uruchomieniu</string>
-    <string name="restore_on_boot_title">Przywróć przy uruchomieniu</string>
+    <string name="restore_on_boot_summary_off">Włączone tunele nie zostaną przywrócone podczas uruchamiania</string>
+    <string name="restore_on_boot_summary_on">Włączone tunele zostaną przywrócone podczas uruchamiania</string>
+    <string name="restore_on_boot_title">Przywróć podczas uruchamiania</string>
     <string name="save">Zapisz</string>
     <string name="select_all">Wybierz wszystko</string>
     <string name="settings">Ustawienia</string>
@@ -214,13 +213,13 @@
     <string name="success_application_will_restart">Ukończono pomyślnie. Aplikacja zostanie uruchomiona ponownie…</string>
     <string name="toggle_all">Przełącz wszystkie</string>
     <string name="toggle_error">Błąd podczas przełączania tunelu WireGuard: %s</string>
-    <string name="tools_installer_already">wg i wg-quick są już zainstalowane</string>
-    <string name="tools_installer_failure">Nie można zainstalować narzędzi wiersza poleceń (brak root\'a?)</string>
+    <string name="tools_installer_already">Narzędzia wg i wg-quick są już zainstalowane</string>
+    <string name="tools_installer_failure">Nie można zainstalować narzędzi wiersza poleceń (brak root-a?)</string>
     <string name="tools_installer_initial">Zainstaluj opcjonalne narzędzia do tworzenia skryptów</string>
     <string name="tools_installer_initial_magisk">Zainstaluj opcjonalne narzędzia do tworzenia skryptów jako moduł Magisk</string>
-    <string name="tools_installer_initial_system">Zainstaluj opcjonalne narzędzia do tworzenia skryptów w partycji systemowej</string>
-    <string name="tools_installer_success_magisk">wg i wg-quick zostały zainstalowane jako moduł Magisk (wymagane ponowne uruchomienie)</string>
-    <string name="tools_installer_success_system">wg i wg-quick zostały zainstalowane w partycji systemowej</string>
+    <string name="tools_installer_initial_system">Zainstaluj opcjonalne narzędzia do tworzenia skryptów na partycji systemowej</string>
+    <string name="tools_installer_success_magisk">Narzędzia wg i wg-quick zostały zainstalowane jako moduł Magisk (wymagane ponowne uruchomienie)</string>
+    <string name="tools_installer_success_system">Narzędzia wg i wg-quick zostały zainstalowane na partycji systemowej</string>
     <string name="tools_installer_title">Zainstaluj narzędzia wiersza poleceń</string>
     <string name="tools_installer_working">Instalowanie wg i wg-quick</string>
     <string name="tools_unavailable_error">Wymagane narzędzia są niedostępne</string>
@@ -231,28 +230,27 @@
     <string name="transfer_mibibytes">%.2f MiB</string>
     <string name="transfer_rx_tx">odebrano: %1$s, wysłano: %2$s</string>
     <string name="transfer_tibibytes">%.2f TiB</string>
-    <string name="tun_create_error">Nie można utworzyć urządzenia tun</string>
+    <string name="tun_create_error">Nie można utworzyć urządzenia TUN</string>
     <string name="tunnel_config_error">Nie można skonfigurować tunelu (wg-quick zwróciło %d)</string>
     <string name="tunnel_create_error">Nie można utworzyć tunelu: %s</string>
-    <string name="tunnel_create_success">Pomyślnie utworzono tunel \"%s\"</string>
+    <string name="tunnel_create_success">Pomyślnie utworzono tunel „%s”</string>
     <string name="tunnel_error_already_exists">Tunel \"%s\" już istnieje</string>
     <string name="tunnel_error_invalid_name">Nieprawidłowa nazwa</string>
     <string name="tunnel_list_placeholder">Dodaj tunel za pomocą niebieskiego przycisku</string>
     <string name="tunnel_name">Nazwa tunelu</string>
     <string name="tunnel_on_error">Nie można włączyć tunelu (wgTurnOn zwróciło %d)</string>
     <string name="tunnel_rename_error">Nie można zmienić nazwy tunelu: %s</string>
-    <string name="tunnel_rename_success">Pomyślnie zmieniono nazwę tunelu na \"%s\"</string>
+    <string name="tunnel_rename_success">Pomyślnie zmieniono nazwę tunelu na „%s”</string>
     <string name="type_name_go_userspace">Przestrzeń użytkownika Go</string>
     <string name="type_name_kernel_module">Moduł jądra</string>
     <string name="unknown_error">Nieznany błąd</string>
-    <string name="version_summary">Implementacja %1$s %2$s</string>
-    <string name="version_summary_checking">Sprawdzanie wersji %s implementacji</string>
-    <string name="version_summary_unknown">Nieznana %s wersja</string>
+    <string name="version_summary_checking">Sprawdzanie wersji implementacji: %s</string>
+    <string name="version_summary_unknown">Nieznana wersja %s</string>
     <string name="version_title">WireGuard dla systemu Android v%s</string>
     <string name="vpn_not_authorized_error">Usługa VPN nie została autoryzowana przez użytkownika</string>
     <string name="vpn_start_error">Nie można uruchomić usługi VPN systemu Android</string>
     <string name="zip_export_error">Nie można wyeksportować tuneli: %s</string>
-    <string name="zip_export_success">Zapisano w \"%s\"</string>
+    <string name="zip_export_success">Zapisano w „%s”</string>
     <string name="zip_export_summary">Plik ZIP zostanie zapisany w folderze pobierania</string>
     <string name="zip_export_title">Wyeksportuj tunele do pliku ZIP</string>
     <string name="biometric_prompt_zip_exporter_title">Uwierzytelnij, aby wyeksportować tunele</string>
