--- a/ui/src/main/res/values-fa-rIR/strings.xml
+++ b/ui/src/main/res/values-fa-rIR/strings.xml
@@ -64,7 +64,6 @@
     <string name="allow_remote_control_intents_summary_on">برنامه‌های بیرونی تونل‌ها را عوض کنند (پیشرفته)</string>
     <string name="allow_remote_control_intents_title">اجازه به برنامه‌های کنترل از راه‌دور</string>
     <string name="allowed_ips">IPهای مجاز</string>
-    <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%1$s\'s %2$s</string>
     <string name="bad_config_context_top_level">%s</string>
     <string name="bad_config_error">%1$s در %2$s</string>
@@ -145,6 +144,7 @@
     <string name="logcat_error">نمی‌توان logcat را اجرا کرد: </string>
     <string name="module_disabler_disabled_summary">ماژول آزمایشی‌ِ کرنل می تواند کارایی را افزایش دهد</string>
     <string name="module_disabler_disabled_title">فعال‌سازی ماژول کرنل ِبک اند</string>
+    <string name="module_disabler_enabled_summary">فضای کاربری کند ممکن است پایداری را بهبود ببخشد</string>
     <string name="module_disabler_enabled_title">غیرفعال‌سازی پس‌زمینه واحد هسته</string>
     <string name="module_installer_error">مشکلی پیش آمد. لطفا دوباره تلاش کنید</string>
     <string name="module_installer_initial">ماژول آزمایشی‌ِ کرنل می تواند کارایی را افزایش دهد</string>
@@ -174,15 +174,27 @@
     <string name="pre_shared_key_enabled">فعال شده</string>
     <string name="private_key">کلید خصوصی</string>
     <string name="public_key">کلید عمومی</string>
+    <string name="qr_code_hint">نکته: با `qrencode -t ansiutf8 &lt; tunnel.conf` تولید کنید.</string>
     <string name="restore_on_boot_summary_off">تونل های فعال در لحظه بالا آمدن سیستم، روشن نخواهند شد</string>
     <string name="restore_on_boot_summary_on">تونل های فعال در لحظه بالا آمدن سیستم، روشن خواهند شد</string>
     <string name="restore_on_boot_title">بازگردانی در بوت</string>
     <string name="save">ذخیره</string>
     <string name="select_all">انتخاب همه</string>
     <string name="settings">تنظیمات</string>
+    <string name="shell_exit_status_read_error">پوسته نمی تواند وضعیت خروجی را بخواند</string>
+    <string name="shell_marker_count_error">شل انتظار داشت 4 نشانگر دریافت شود %d</string>
     <string name="shell_start_error">آغاز پوسته شکست خورد: %d</string>
     <string name="success_application_will_restart">موفقیت. برنامه اکنون دوباره راه‌اندازی خواهد شد…</string>
     <string name="toggle_all">معکوس کردن همه</string>
+    <string name="toggle_error">خطا در ضامن تونل WireGuard: %s</string>
+    <string name="tools_installer_already">wg و wg-quick قبلاً نصب شده اند</string>
+    <string name="tools_installer_failure">ابزارهای خط-فرمان نصب نمی‌شود (روت نیستید؟)</string>
+    <string name="tools_installer_initial">ابزارهای اختیاری را برای اسکریپت نویسی نصب کنید</string>
+    <string name="tools_installer_initial_magisk">ابزار اختیاری را برای اسکریپت نویسی به عنوان ماژول Magisk نصب کنید</string>
+    <string name="tools_installer_initial_system">ابزارهای اختیاری را برای اسکریپت نویسی در پارتیشن سیستم نصب کنید</string>
+    <string name="tools_installer_success_magisk">wg و wg-quick به عنوان پودمان Magisk نصب شدند
+( نیاز به راه‌اندازی دوباره)</string>
+    <string name="tools_installer_success_system">wg و wg-fast در پارتیشن سیستم نصب شده است</string>
     <string name="tools_installer_title">ابزارهای خط فرمان را نصب کنید</string>
     <string name="tools_installer_working">در حال نصب wg و wg-quick</string>
     <string name="tools_unavailable_error">ابزارهای لازم در دسترس نیست</string>
@@ -201,12 +213,12 @@
     <string name="tunnel_error_invalid_name">نام نامعتبر</string>
     <string name="tunnel_list_placeholder">به‌وسیله دکمه آبی یک تونل بیفزایید</string>
     <string name="tunnel_name">نام تونل</string>
+    <string name="tunnel_on_error">روشن کردن تونل امکان پذیر نیست (wgTurnOn برگشت %d )</string>
     <string name="tunnel_rename_error">ناتوان در تغییر نام تونل: %s</string>
     <string name="tunnel_rename_success">نام تونل با موفقیت تغییر یافت به “%s”</string>
     <string name="type_name_go_userspace">رفتن به فضای کاربر</string>
     <string name="type_name_kernel_module">واحد هسته</string>
     <string name="unknown_error">خطای نامشخص</string>
-    <string name="version_summary">%1$s پس‌زمینه نگارش%2$s</string>
     <string name="version_summary_checking">در حال بررسی نگارش پس‌زمینه %s</string>
     <string name="version_summary_unknown">نگارش %s ناشناخته</string>
     <string name="version_title">WireGuard برای اندروید نگارش %s</string>
