--- a/ui/src/main/res/values-it/strings.xml
+++ b/ui/src/main/res/values-it/strings.xml
@@ -63,7 +63,6 @@
     <string name="allow_remote_control_intents_summary_on">Le applicazioni esterne possono attivare tunnel (avanzato)</string>
     <string name="allow_remote_control_intents_title">Consenti applicazioni di controllo remoto</string>
     <string name="allowed_ips">IP consentiti</string>
-    <string name="app_name">WireGuard</string>
     <string name="bad_config_context">%2$s di %1$s</string>
     <string name="bad_config_context_top_level">%s</string>
     <string name="bad_config_error">%1$s in %2$s</string>
@@ -97,10 +96,17 @@
     <string name="create_output_dir_error">Impossibile creare la cartella di output</string>
     <string name="create_temp_dir_error">Impossibile creare la cartella locale temporanea</string>
     <string name="create_tunnel">Crea tunnel</string>
+    <string name="copied_to_clipboard">%s copiato negli appunti</string>
     <string name="dark_theme_summary_off">Stai usando il tema chiaro (giorno)</string>
     <string name="dark_theme_summary_on">Stai usando il tema scuro (notte)</string>
     <string name="dark_theme_title">Usa tema scuro</string>
     <string name="delete">Elimina</string>
+    <string name="tv_delete">Seleziona il tunnel da eliminare</string>
+    <string name="tv_select_a_storage_drive">Seleziona un\'unità di archiviazione</string>
+    <string name="tv_no_file_picker">Installa un\'utilità di gestione file per sfogliare i file</string>
+    <string name="tv_add_tunnel_get_started">Aggiungi un tunnel per iniziare</string>
+    <string name="disable_config_export_title">Disattiva esportazione config</string>
+    <string name="disable_config_export_description">Disabilitare l\'esportazione della configurazione rende le chiavi private meno accessibili</string>
     <string name="dns_servers">Server DNS</string>
     <string name="edit">Modifica</string>
     <string name="endpoint">Endpoint</string>
@@ -212,7 +218,6 @@
     <string name="type_name_go_userspace">Spazio utente Go</string>
     <string name="type_name_kernel_module">Modulo kernel</string>
     <string name="unknown_error">Errore sconosciuto</string>
-    <string name="version_summary">Backend %1$s %2$s</string>
     <string name="version_summary_checking">Controllo versione backend %s</string>
     <string name="version_summary_unknown">Versione %s sconosciuta</string>
     <string name="version_title">WireGuard per Android v%s</string>
